Fixed CSS footer overflowing over main content by giving main html container padding bottom to fit the footer inside of the html page.

--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,9 @@
 
 html {
   margin: 0;
-  height: 100%;
+  position: relative;
+  min-height: 100vh;
+  padding-bottom: 5rem;
   font-family: "Open Sans", sans-serif;
 }
 
